Fixed Field Basic spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -188,9 +188,10 @@ textarea {
 }
 
 input {
-	width:100%;
 	line-height:1rem;
-	margin-left: 5%;
+	margin-left: 10%;
+	margin-right: 10%;
+	width: 80%;
 }
 
 
